minor tweak to the overflow property of the fade element to ensure the text doesn't get clipped when absolutely positioned

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -944,10 +944,6 @@ h1, h2, h3, h4, h5, h6 {
   opacity: 0;
 }
 
-.fade {
-  overflow: hidden;
-}
-
 /* ==========================================================================
    =buttons
    ========================================================================== */
@@ -1271,7 +1267,7 @@ button {
    ========================================================================== */
 .fade {
   position: relative;
-  overflow: hidden;
+  overflow: visible;
   min-height: 90px;
   margin: 3em 0;
 }
